--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
     <!-- Hero Section -->
     <section class="bg-gradient-to-r from-blue-600 to-purple-600 text-white py-8">
         <div class="container mx-auto px-4 text-center">
-            <h2 class="text-2xl font-bold mb-2">متجر لوكا | LOCA</h2>
+            <h2 class="text-2xl font-bold mb-2">متجر سنو | SNO</h2>
             <p class="text-blue-100 mb-4">نحن متجر متكامل ل لعبه بلوكس فروت ونسعد بخدمتكم دائما</p>
             <p class="text-sm text-blue-200">بعد الطلب تواصل معنا مباشره في الواتساب</p>
             <div class="mt-6 flex justify-center gap-4">
@@ -847,8 +847,8 @@
         const products = [
             {
                 id: 1,
-                name: 'فاكهة التنين دائمة',
-                subtitle: 'Blox Fruits - دائمة',
+                name: 'تجميع فلوس ايمرجنسي',
+                subtitle: '100K',
                 price: 79,
                 originalPrice: 115,
                 image: 'https://cdn.discordapp.com/attachments/1377799649372536966/1401399741589229699/IMG_5224.png?ex=68961177&is=6894bff7&hm=4da28e52f401dab0bfc7b7f176519b56d8f0514480387aef572f8fdc7bba8e94&',
